// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish --cd-version patch with previous prerelease also graduates prereleased 1`] = `
v1.0.1
D

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  "version": "1.0.1-beta.3"
+  "version": "1.0.1"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  "version": "1.0.0",
+  "version": "1.0.1",
diff --git a/packages/package-4/package.json b/packages/package-4/package.json
index SHA..SHA 100644
--- a/packages/package-4/package.json
+++ b/packages/package-4/package.json
@@ -3 +3 @@
-  "version": "1.0.1-beta.3",
+  "version": "1.0.1",
@@ -5 +5 @@
-    "package-5": "^1.0.1-beta.3"
+    "package-5": "^1.0.1"
diff --git a/packages/package-5/package.json b/packages/package-5/package.json
index SHA..SHA 100644
--- a/packages/package-5/package.json
+++ b/packages/package-5/package.json
@@ -3 +3 @@
-  "version": "1.0.1-beta.3",
+  "version": "1.0.1",
`;

exports[`publish --cd-version prerelease with previous prerelease bumps changed only 1`] = `
v1.0.1-beta.4
D

diff --git a/lerna.json b/lerna.json
index SHA..SHA 100644
--- a/lerna.json
+++ b/lerna.json
@@ -2 +2 @@
-  "version": "1.0.1-beta.3"
+  "version": "1.0.1-beta.4"
diff --git a/packages/package-3/package.json b/packages/package-3/package.json
index SHA..SHA 100644
--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -3 +3 @@
-  "version": "1.0.0",
+  "version": "1.0.1-beta.4",
`;
